--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="header-logo">
-      <a href="#">Space Center</a>
+      <a href="#">Space</a>
     </div>
     <div class="header-content">
       <div class="header-wrap">
